Adding styles to the project1.

--- a/Ajax-course/ajax-localhost/project1/style/houseConfiguration.css
+++ b/Ajax-course/ajax-localhost/project1/style/houseConfiguration.css
@@ -1,6 +1,14 @@
 body {
 
-    background-color: #fffaf6;
+    background-color: #ffffef;
+}
+
+h1 {
+    padding-bottom: 20px;
+}
+
+label {
+    padding-right: 10px;
 }
 
 .message {
@@ -10,5 +18,6 @@ body {
 }
 
 #formContainer, .message, #estimateOutput, h3 {
-    padding-left: 20px;
+    padding-left: 50px;
+
 }
