Adding styles to the project1.

--- a/Ajax-course/ajax-localhost/project1/style/houseConfiguration.css
+++ b/Ajax-course/ajax-localhost/project1/style/houseConfiguration.css
@@ -5,19 +5,49 @@ body {
 
 h1 {
     padding-bottom: 20px;
+    color: #1f684f;
+    padding-left: 50px;
+}
+
+h3 {
+    color: #5f72b1;
+}
+
+form {
+
+    float: left;
 }
 
 label {
     padding-right: 10px;
+    color: #000081;
+    font-weight: bold;
 }
+
+.formSection {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
 
 .message {
 
     color: darkred;
     font-size: 14px;
+    padding-top: 15px;
 }
 
-#formContainer, .message, #estimateOutput, h3 {
+#formContainer, #estimateOutput, h3 {
     padding-left: 50px;
 
+}
+
+#submit {
+
+    background-color: #cfe2eb;
+}
+
+#submit:hover {
+
+    background-color: #ddf0f9;
 }
