Adding demos prictice abut jason and events. Adding lab5(Jason).

--- a/Ajax-course/ajax-localhost/submit_week02/week02/lab3/style/lab3.css
+++ b/Ajax-course/ajax-localhost/submit_week02/week02/lab3/style/lab3.css
@@ -1,14 +1,15 @@
 body {
 
-    background-color: #72838e !important;
+    background-color: #b6d2dd !important;
 }
 
 form {
+
     padding: 100px;
 }
 
 .form-control {
 
     margin-bottom: 10px;
-
+    width: 400px !important;
 }
