--- a/Ajax-course/ajax-localhost/demo/demo.css
+++ b/Ajax-course/ajax-localhost/demo/demo.css
@@ -2,3 +2,26 @@ h1 {
 
     color: green;
 }
+
+.list {
+
+    color: blue;
+}
+
+.list1 {
+
+    color: red;
+}
+
+.list2 {
+
+    color: green
+}
+
+
+
+
+
+
+
+
