--- a/Ajax-course/ajax-localhost/project3/style/project3.css
+++ b/Ajax-course/ajax-localhost/project3/style/project3.css
@@ -8,6 +8,27 @@ body {
     text-align: center;
 }
 
+h1 {
+    color: #b19898;
+    font-size: 50px;
+}
+
+h2 {
+    color: #C7B9B9;
+    font-size: 30px;
+}
+
+#taskStatus {
+    color: #ffd200;
+    font-size: 25px;
+}
+
+#inputError {
+    color: #ff0000;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
 #table {
     border-collapse: collapse;
     width: 100%;
@@ -19,6 +40,7 @@ td {
     text-align: left;
     padding: 10px;
     color: #fff;
+    font-size: 30px;
 }
 
 tr:nth-child(even) {
@@ -30,6 +52,6 @@ tr:nth-child(odd) {
 }
 
 #trashIcon {
-    font-size: 18px;
+    font-size: 30px;
 }
 
